--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,8 @@ b2sdk==1.0.2
 certifi==2020.12.5
 chardet==4.0.0
 dj-database-url==0.5.0
-Django==3.1.5
+Django==3.1.6
+django-autoslug==1.9.8
 django-b2==0.7.0
 django-heroku==0.3.1
 django-summernote==0.8.11.6
@@ -16,10 +17,10 @@ Pillow==8.1.0
 psycopg2==2.8.6
 python-dateutil==2.8.1
 python-decouple==3.4
-pytz==2020.5
+pytz==2021.1
 requests==2.25.1
 six==1.15.0
 sqlparse==0.4.1
-tqdm==4.56.0
-urllib3==1.26.2
+tqdm==4.56.2
+urllib3==1.26.3
 whitenoise==5.2.0
