--- a/Pipfile
+++ b/Pipfile
@@ -30,6 +30,7 @@ urllib3 = "==1.26.3"
 whitenoise = "==5.2.0"
 Pillow = "==8.1.0"
 Django = "==3.1.6"
+djangorestframework = "*"
 
 [dev-packages]
 
