--- a/Pipfile
+++ b/Pipfile
@@ -31,6 +31,7 @@ whitenoise = "==5.2.0"
 Pillow = "==8.1.0"
 Django = "==3.1.6"
 djangorestframework = "*"
+django-cors-headers = "*"
 
 [dev-packages]
 
